turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:10: error: value left is not a member of Unit
possible cause: maybe a semicolon is missing before `value left'?
    left(90 + 45),
    ^Kerr36:20: error: class Array takes type parameters
def makePattern(x:Array) {
                  ^Kerr36:20: error: class Array takes type parameters
def makePattern(x:Array) {
                  ^